<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="8dp"
    android:background="@drawable/item_shape"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    tools:ignore="MissingDefaultResource"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="4dp"
        android:background="@drawable/shape_for_task_item"
        android:layout_weight="50"
        android:weightSum="100">


        <TextView
            android:id="@+id/tittle_tv"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/title_event"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="4dp"
        android:background="@drawable/shape_for_list_adapter_view1"
        android:layout_weight="50">

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="4dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>